// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GenderField /> matches snapshot 1`] = `
<select
  class="sc-dIvqjp cnqptG"
  id="genderField"
  name="name"
  type="text"
>
  <option
    disabled=""
    value="select"
  >
    wybierz 
  </option>
  <option
    value="male"
  >
    mężczyzna
  </option>
  <option
    value="female"
  >
    kobieta
  </option>
</select>
`;

exports[`<GenderField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <label
        for="name"
      >
        Test*
      </label>
      <div
        class="sc-iemXMA clxLOp"
      >
        <select
          class="sc-dIvqjp gBHSSD"
          id="genderField"
          label="Test"
          name="name"
          required=""
          type="text"
        >
          <option
            disabled=""
            value="select"
          >
            wybierz *
          </option>
          <option
            value="male"
          >
            mężczyzna
          </option>
          <option
            value="female"
          >
            kobieta
          </option>
        </select>
        <span
          class="sc-hHEjAm gimkwY"
        />
      </div>
      <span
        class="sc-hBMVcZ kROtfw"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<GenderField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <label
        for="name"
      >
        Test
      </label>
      <div
        class="sc-iemXMA clxLOp"
      >
        <select
          class="sc-dIvqjp cnqptG"
          id="genderField"
          label="Test"
          name="name"
          type="text"
        >
          <option
            disabled=""
            value="select"
          >
            wybierz 
          </option>
          <option
            value="male"
          >
            mężczyzna
          </option>
          <option
            value="female"
          >
            kobieta
          </option>
        </select>
        <span
          class="sc-hHEjAm gimkwY"
        />
      </div>
    </div>
  </form>
</div>
`;

exports[`<GenderField /> select field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <div
        class="sc-iemXMA clxLOp"
      >
        <select
          class="sc-dIvqjp gBHSSD"
          id="genderField"
          name="name"
          type="text"
        >
          <option
            disabled=""
            value="select"
          >
            wybierz 
          </option>
          <option
            value="male"
          >
            mężczyzna
          </option>
          <option
            value="female"
          >
            kobieta
          </option>
        </select>
        <span
          class="sc-hHEjAm gimkwY"
        />
      </div>
      <span
        class="sc-hBMVcZ kROtfw"
      >
        Podane dane są nieprawidłowe
      </span>
    </div>
  </form>
</div>
`;
